# FRUST

./: .gitignore  AGENTS.md  LICENSE  README.example.md  README.md  dx_submit_sub.ipynb  ir_ts2_xtb.parquet  ir_ts2_xtb_b0.parquet  ir_ts2_xtb_b1.parquet  ir_ts2_xtb_b2.parquet  ir_ts2_xtb_b3.parquet  ir_ts2_xtb_b4.parquet  ir_ts2_xtb_b5.parquet  ir_ts2_xtb_b6.parquet  ir_ts2_xtb_b7.parquet  ir_ts2_xtb_b8.parquet  ir_ts2_xtb_b9.parquet  mkdocs.yml  orca_test.ipynb  pyproject.toml  pyrightconfig.json.disabled  test.parquet  test.py
UMA/: UMA_ligands.parquet  UMA_mols.parquet  UMA_run_server.ipynb  results.parquet  run.ipynb  run.py
analysis/: TS3_DFT_font_preliminary.html  TS4_DFT_font_preliminary.html  a10_UMA.ipynb  a11_int3_TMP.ipynb  a12_ts3_ts4_int3_correlation.ipynb  a13_full_test_1m.ipynb  a14_full_font_xtb.ipynb  a15_ts3_ts4_int_correlation_redo.ipynb  a16_full_ir_xtb.ipynb  a17_UMA_present.ipynb  a18_phenol.ipynb  a19_dft_finalists.ipynb  a1_ir.ipynb  a2_font_ts2.ipynb  a3_font_ts1.ipynb  a4_font_ts3.ipynb  a5_new_ts_pretests.ipynb  a6_font_ts3_ts4_int3.ipynb  a7_tmp_opt.ipynb  a8_TMP_all_tss_font_1.ipynb  a8_TMP_font_1.ipynb  a9_UMA.ipynb
datasets/: 1m.csv  auxillary.csv  dft_finalists.csv  dft_finalists_pi.csv  font_smiles.csv  font_smiles_cat.csv  font_smiles_cat1.csv  font_smiles_cat_all.csv  font_smiles_rpos.csv  int3.csv  ir_DFT_validation.csv  ir_borylation.csv  ir_borylation_test.csv
dev/: d0_pipe_init.ipynb  d10_read_comment_in_struct.ipynb  d11_ts3_embed.ipynb  d12_ts3_pipe.ipynb  d14_submit_sub.ipynb  d15_ts_per_rpos.ipynb  d16_new_pipe_flow.ipynb  (+54 more)
(+885 files in other folders)
